tests/valid/redefine-in-if.lua
local txt = nil

if txt == nil then
        txt = "?"
end

string.len(txt .. "hello")