tests/failing/reassign-after-function-use.lua
local a = "hmm"

function blah()
        string.len(a)
end

a = "bad"